--- a/src/main/resources/static/resources/pages/propertyDetails.html
+++ b/src/main/resources/static/resources/pages/propertyDetails.html
@@ -88,10 +88,10 @@
                   <h3 class="headline">Business Details</h3>
                   <div ng-if="propDetails.propertyMetaData.businessType === 'Restaurants and Food'" ng-include="'resources/pages/businessDetailTemplates/restaurantDetailTemplate.html'"></div>
                   <div ng-if="propDetails.propertyMetaData.businessType === 'Gas Station'" ng-include="'resources/pages/businessDetailTemplates/gasStationDetailTemplate.html'"></div>
-                  <!--<div ng-if="propDetails.propertyMetaData.businessType === 'Laundry'" ng-include="'resources/pages/businessDetailTemplates/coinLaundryDetailTemplate.html'"></div>-->
+                  <div ng-if="propDetails.propertyMetaData.businessType === 'Laundry'" ng-include="'resources/pages/businessDetailTemplates/coinLaundryDetailTemplate.html'"></div>
                   <!--<div ng-if="propDetails.propertyMetaData.businessType === 'Dry Cleaners'" ng-include="'resources/pages/businessDetailTemplates/dryCleanersDetailTemplate.html'"></div>-->
-                  <!--<div ng-if="propDetails.propertyMetaData.businessType === 'Liquor Store'" ng-include="'resources/pages/businessDetailTemplates/liquorStoreDetailTemplate.html'"></div>-->
-                  <!--<div ng-if="propDetails.propertyMetaData.businessType === 'Beauty Salon/Spa/Nail'" ng-include="'resources/pages/businessDetailTemplates/beautySalonDetailTemplate.html'"></div>-->
+                  <div ng-if="propDetails.propertyMetaData.businessType === 'Liquor Store'" ng-include="'resources/pages/businessDetailTemplates/liquorStoreDetailTemplate.html'"></div>
+                  <div ng-if="propDetails.propertyMetaData.businessType === 'Beauty Salon/Spa/Nail'" ng-include="'resources/pages/businessDetailTemplates/beautySalonDetailTemplate.html'"></div>
                 </div>
             </div>
           </div>
