--- a/src/main/resources/static/resources/pages/addListingForms/restaurantForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/restaurantForm.html
@@ -10,6 +10,7 @@
     </div>
 </div>
 <div class="row">
+    <!--Kitchen-->
     <div class="col-md-6 col-lg-6 col-xl-6">
         <div ng-click="hideKitchen = ! hideKitchen">
             <label ng-class="{'details-not-expanded': hideKitchen, 'details-expanded': !hideKitchen}" >Kitchen Details</label>
@@ -51,12 +52,12 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Dry Storage</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.dryStorage"
-                           name="dryStorage" id="dryStorage" placeholder="">
+                           name="dryStorage" id="dryStorage" placeholder="Sq. Ft.">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Total cost of Utensils</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.totalCostUtensils"
-                           name="totalCostUtensils" id="totalCostUtensils" placeholder="">
+                           name="totalCostUtensils" id="totalCostUtensils" placeholder="$">
                 </div>
             </div>
 
@@ -66,28 +67,28 @@
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="dishWasher" id="dishWasher" ng-model="property.rest.dishWasher"
-                               ng-init="property.rest.dishWasher='No'" ng-false-value="No" ng-true-value="Yes">
+                               ng-init="property.rest.dishWasher='Yes'" ng-false-value="No" ng-true-value="Yes">
                         <label for="dishWasher">Dishwasher</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="oven" id="oven" ng-model="property.rest.oven"
-                               ng-init="property.rest.oven='No'" ng-false-value="No" ng-true-value="Yes">
+                               ng-init="property.rest.oven='Yes'" ng-false-value="No" ng-true-value="Yes">
                         <label for="oven">Range/Oven</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="walkInFreezer" id="walkInFreezer" ng-model="property.rest.walkInFreezer"
-                               ng-init="property.rest.walkInFreezer='No'" ng-false-value="No" ng-true-value="Yes">
+                               ng-init="property.rest.walkInFreezer='Yes'" ng-false-value="No" ng-true-value="Yes">
                         <label for="walkInFreezer">Walk in Freezer</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="refrigerator" id="refrigerator" ng-model="property.rest.refrigerator"
-                               ng-init="property.rest.refrigerator='No'" ng-false-value="No" ng-true-value="Yes">
+                               ng-init="property.rest.refrigerator='Yes'" ng-false-value="No" ng-true-value="Yes">
                         <label for="refrigerator">Refrigerator</label>
                     </div>
                 </div>
@@ -112,7 +113,7 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Interior Area</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.interiorSqft"
-                           name="interiorSqft" id="interiorSqft" placeholder="">
+                           name="interiorSqft" id="interiorSqft" placeholder="Sq. Ft.">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Condition</label>
@@ -127,7 +128,7 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Approx Furniture Cost</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.furnitureCost"
-                           name="furnitureCost" id="furnitureCost" placeholder="">
+                           name="furnitureCost" id="furnitureCost" placeholder="$">
                 </div>
 
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
@@ -143,7 +144,7 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Interior Cost</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.interiorCost"
-                           name="interiorCost" id="interiorCost" placeholder="">
+                           name="interiorCost" id="interiorCost" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Interior Features</label>
@@ -222,7 +223,7 @@
     <!--Expenses-->
     <div class="col-md-6 col-lg-6 col-xl-6">
         <div ng-click="hideExpenses = ! hideExpenses">
-            <label ng-class="{'details-not-expanded': hideExpenses, 'details-expanded': !hideExpenses}" >Expense Details</label>
+            <label ng-class="{'details-not-expanded': hideExpenses, 'details-expanded': !hideExpenses}" >Expenses Detail</label>
             <img ng-show="!hideExpenses" ng-src="../../img/icon/downArrow.png" style="float: right"/>
             <img ng-show="hideExpenses" ng-src="../../img/icon/upArrow.png" style="float: right"/>
         </div>
@@ -231,22 +232,22 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Rent</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.monthlyRent"
-                           name="monthlyRent" id="monthlyRent" placeholder="">
+                           name="monthlyRent" id="monthlyRent" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>NNN</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.nnnExpense"
-                           name="nnnExpense" id="nnnExpense" placeholder="">
+                           name="nnnExpense" id="nnnExpense" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Garbage</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.garbageExpense"
-                           name="garbageExpense" id="garbageExpense" placeholder="">
+                           name="garbageExpense" id="garbageExpense" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Utilities</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.utilitiesExpense"
-                           name="utilitiesExpense" id="utilitiesExpense" placeholder="">
+                           name="utilitiesExpense" id="utilitiesExpense" placeholder="$">
                 </div>
             </div>
         </div>
@@ -255,7 +256,7 @@
     <!--Revenue-->
     <div class="col-md-6 col-lg-6 col-xl-6">
         <div ng-click="hideRevenue = ! hideRevenue">
-            <label ng-class="{'details-not-expanded': hideRevenue, 'details-expanded': !hideRevenue}" >Revenue Details</label>
+            <label ng-class="{'details-not-expanded': hideRevenue, 'details-expanded': !hideRevenue}" >Revenues Detail</label>
             <img ng-show="!hideRevenue" ng-src="../../img/icon/downArrow.png" style="float: right"/>
             <img ng-show="hideRevenue" ng-src="../../img/icon/upArrow.png" style="float: right"/>
         </div>
@@ -264,28 +265,28 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Restaurant</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueInResto"
-                           name="avgRevenueInResto" id="avgRevenueInResto" placeholder="">
+                           name="avgRevenueInResto" id="avgRevenueInResto" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Catering</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueCatering"
-                           name="avgRevenueCatering" id="avgRevenueCatering" placeholder="">
+                           name="avgRevenueCatering" id="avgRevenueCatering" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in To Go</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueToGo"
-                           name="avgRevenueToGo" id="avgRevenueToGo" placeholder="">
+                           name="avgRevenueToGo" id="avgRevenueToGo" placeholder="$">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Liquor</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.avgTevenueLiquer"
-                           name="avgTevenueLiquer" id="avgTevenueLiquer" placeholder="">
+                           name="avgTevenueLiquer" id="avgTevenueLiquer" placeholder="$">
                 </div>
 
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Income</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.avgIncome"
-                           name="avgIncome" id="avgIncome" placeholder="">
+                           name="avgIncome" id="avgIncome" placeholder="$">
                 </div>
             </div>
         </div>
@@ -294,7 +295,7 @@
     <!--Employees-->
     <div class="col-md-6 col-lg-6 col-xl-6">
         <div ng-click="hideEmployees = ! hideEmployees">
-            <label ng-class="{'details-not-expanded': hideEmployees, 'details-expanded': !hideEmployees}" >Employees Details</label>
+            <label ng-class="{'details-not-expanded': hideEmployees, 'details-expanded': !hideEmployees}" >Employees Detail</label>
             <img ng-show="!hideEmployees" ng-src="../../img/icon/downArrow.png" style="float: right"/>
             <img ng-show="hideEmployees" ng-src="../../img/icon/upArrow.png" style="float: right"/>
         </div>
