Added bookmarked property service

--- a/src/main/resources/static/resources/pages/myProfile.html
+++ b/src/main/resources/static/resources/pages/myProfile.html
@@ -1,4 +1,4 @@
-<div id="content" ng-init="getprofile()">
+<div id="content">
     <div class="container">
       <div class="row justify-content-md-center">
             <div class="col col-lg-12 col-xl-12">
@@ -138,7 +138,7 @@
                        </div>
                        <hr>
                        <div class="form-group action">
-                         <button type="submit" class="btn btn-lg btn-primary">Update Profile</button>
+                         <button type="button" class="btn btn-lg btn-primary" data-ng-click="updateProfile()">Update Profile</button>
                        </div>
                      </form>
                    </div>
