--- a/src/main/resources/static/resources/pages/bookmarkedListing.html
+++ b/src/main/resources/static/resources/pages/bookmarkedListing.html
@@ -3,11 +3,11 @@
               <h1>BookMarked Listings</h1>
             </div>
               <div class="row item-listing grid">
-                    <div ng-repeat="prop in myList.propertyList track by $index" class="item col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-6" id="prop{{index}}">
+                    <div ng-repeat="prop in myList.propertyList track by $index" class="item col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-6" id="prop{{$index}}">
                         <div class="item-image">
                             <a class="item-image" href="#propertyDetails/{{prop.id}}">
                                 <img src="{{prop.imageUrl}}" style="width:400px;height:240px" class="img-fluid" alt="">
-                                <a href="#" class="save-item"><i class="fa fa-star"></i></a>
+                                <a class="save-item" ng-class="{'save-item-active': prop.isBookMarked}" ng-click="bookMarked(prop, $index, myList.pageNumber)"><i class="fa fa-star"></i></a>
                             </a>
 
                             <a href="#propertyDetails/{{prop.id}}" class="item-meta">
